--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,11 @@
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
+# Binaries
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+**/*.class
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-/out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+
+# User-specific stuff
+
+**/.idea/**/workspace.xml
+
+**/.idea/**/tasks.xml
